src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABA_Num__c</fullName>
        <label>ABA Num</label>
        <picklist>
            <picklistValues>
                <fullName>CT-211170114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE-031101143</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA-211070175</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI/OH-241070417</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH-011401533</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY/VT-021313103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA-036076150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI–011500120</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AUM_Loans__c</fullName>
        <label>AUM</label>
        <summarizedField>Obligation__c.Loan_Balance__c</summarizedField>
        <summaryForeignKey>Obligation__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Title__c</fullName>
        <inlineHelpText>Pulled from Mainframe</inlineHelpText>
        <label>Account Title</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_growth_Indicator__c</fullName>
        <label>Account growth Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Fast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Median</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_In_Drawn_Spread__c</fullName>
        <label>All-In Drawn Spread</label>
        <summarizedField>Account_Plan__c.All_In_Drawn_Spread_LIBOR_Spread_Faci__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Plan__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Plan__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <summarizedField>Account_Plan__c.Annual_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Plan__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Plan__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assets_Under_Management__c</fullName>
        <label>AUM</label>
        <summarizedField>Deposit__c.Current_Balance__c</summarizedField>
        <summaryForeignKey>Deposit__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Average_Outstanding__c</fullName>
        <label>Average Outstanding</label>
        <summarizedField>Account_Plan__c.Average_Outstanding__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Plan__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Plan__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bank_Number_Name__c</fullName>
        <label>Bank Number/Name</label>
        <picklist>
            <picklistValues>
                <fullName>060, PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>080, DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>880, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>880, VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>022, CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101, MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30, NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>001, RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800, OH</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <label>Batch ID (sub Company ID)</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Amount__c</fullName>
        <label>Commitment Amount</label>
        <summarizedField>Account_Plan__c.Commitment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Plan__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Plan__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company_Growth_Indicator__c</fullName>
        <label>Company Growth Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>High Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low growth</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Activation__c</fullName>
        <label>Date of Activation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEDI_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FEDI Reporting?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_company_a_debit_Originator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this company a debit Originator?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <summarizedField>Obligation__c.Origination_Balance__c</summarizedField>
        <summaryForeignKey>Obligation__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Multiple_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Accounts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROEC__c</fullName>
        <label>ROEC</label>
        <summarizedField>Account_Plan__c.ROEC_Return_on_Economic_Capital__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Plan__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Plan__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RORC__c</fullName>
        <label>RORC</label>
        <summarizedField>Account_Plan__c.RORC_Return_on_Regulatory_Capital__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Plan__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Plan__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF(LEN(BillingState)=0, &quot;None&quot;,
IF(CONTAINS(&quot;AK:AZ:CA:CO:HA:ID:KS:MT:NV:NM:OK:OR:TX:UT:WA:WY&quot;, BillingState), &quot;West&quot;,
IF(CONTAINS(&quot;CT:ME:MA:NH:NY:PA:RI:VT&quot;, BillingState), &quot;East&quot;,
IF(CONTAINS(&quot;AL:AR:DC:DE:FL:GA:KY:LA:MD:MS:NC:NJ:SC:TN:VA:WV&quot;, BillingState), &quot;South&quot;,
IF(CONTAINS(&quot;IL:IN:IA:MI:MN:MO:NE:ND:OH:SD:WI&quot;, BillingState), &quot;North&quot;, &quot;Unknown&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retention_Risk__c</fullName>
        <label>Retention Risk</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Generated__c</fullName>
        <description>roll up of deposits</description>
        <label>Revenue Generated</label>
        <summarizedField>Deposit__c.Revenue__c</summarizedField>
        <summaryForeignKey>Deposit__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Risk_Factor__c</fullName>
        <label>Risk Factor</label>
        <picklist>
            <picklistValues>
                <fullName>Large Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint to RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <picklist>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <picklistValues>
                <fullName>Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prompt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Same</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uplift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Same_Day_ACH__c</fullName>
        <label>Same Day ACH?</label>
        <picklist>
            <picklistValues>
                <fullName>Opt In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sole_Proprietor_100_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sole Proprietor/100% Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <formula>IF(
    NOT(ISNULL(CreatedDate)), /* Condition */
    TEXT(FLOOR((NOW()-CreatedDate)/365.2425)) &amp; &quot; year(s) &quot; &amp;
    TEXT(FLOOR(MOD((NOW()-CreatedDate),365.2425)/30)) &amp; &quot; month(s) &quot; &amp;
    TEXT(FLOOR(MOD((NOW()-CreatedDate),30))) &amp; &quot; days(s) &quot; , /* Value IF True */
    &quot;&quot; /* Value IF False */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_AUM__c</fullName>
        <formula>AUM_Loans__c+Assets_Under_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transmitting_File_to_Bank__c</fullName>
        <label>Transmitting File to Bank</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mainframe to Mainframe</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Address__c</fullName>
        <label>Vendor Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_City__c</fullName>
        <label>Vendor City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_State__c</fullName>
        <label>Vendor State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Zip__c</fullName>
        <label>Vendor Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>With_ACH_NOC_MGR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>With ACH NOC Mgr?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>With_IAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>With IAT?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.SALES</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>Tier__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Retention_Risk__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Top_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Annual_Revenue__c</columns>
        <columns>ACCOUNT.SALES</columns>
        <filterScope>Everything</filterScope>
        <label>My Top Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Top_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Revenue_Generated__c</columns>
        <columns>Assets_Under_Management__c</columns>
        <columns>Retention_Risk__c</columns>
        <columns>Risk_Factor__c</columns>
        <filterScope>Everything</filterScope>
        <label>Top Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Vendor_Transmission_File_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Transmitting_File_to_Bank__c) = &quot;Vendor&quot;,
ISBLANK(Vendor_Name__c))</errorConditionFormula>
        <errorMessage>Vendor Name is required if Transmission File to Bank = Vendor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_Transmission_File_Validation2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Transmitting_File_to_Bank__c) = &quot;Vendor&quot;,
ISBLANK(Vendor_Contact__c))</errorConditionFormula>
        <errorMessage>Vendor Contact is required if Transmission File to Bank = Vendor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_Transmission_File_Validation3</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Transmitting_File_to_Bank__c) = &quot;Vendor&quot;,
ISBLANK(Vendor_Address__c))</errorConditionFormula>
        <errorMessage>Vendor Address is required if Transmission File to Bank = Vendor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_Transmission_File_Validation4</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Transmitting_File_to_Bank__c) = &quot;Vendor&quot;,
ISBLANK(Vendor_City__c))</errorConditionFormula>
        <errorMessage>Vendor City is required if Transmission File to Bank = Vendor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_Transmission_File_Validation5</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Transmitting_File_to_Bank__c) = &quot;Vendor&quot;,
ISBLANK(Vendor_State__c))</errorConditionFormula>
        <errorMessage>Vendor State is required if Transmission File to Bank = Vendor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_Transmission_File_Validation6</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Transmitting_File_to_Bank__c) = &quot;Vendor&quot;,
ISBLANK(Vendor_Zip__c))</errorConditionFormula>
        <errorMessage>Vendor Zip is required if Transmission File to Bank = Vendor</errorMessage>
    </validationRules>
</CustomObject>